# stringlib

./: CMakeLists.txt  README.md
cmake/: stringlibConfig.cmake.in  stringutilsConfig.cmake.in
docs/: CMakeLists.txt
include/: stringlib.h  stringutils.h
src/: CMakeLists.txt  stringlib.cpp  stringutils.cpp
test/: CMakeLists.txt  stringlib_test.cpp  stringutils-test.cpp
